--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,19 +28,45 @@
           <div class="col-xs-offset-2 col-xs-8">
             <canvas id="rothko"></canvas>
             <div>
-            <h1>S. BILSTEIN</h1> 
-              <h2>
+              <span>
+                <h1>S. BILSTEIN</h1> 
+              </span>
+              <h3>
                 <em>Untitled</em> c. 2015
-              </h2>
+              </h3>
               <p>
-                Software Engineer, aspirational musician, and cloudhead s bilstein created this website one afternoon using a well known method of randomly generating squares on a grid. Interests include: diversity outreach, distributed systems, big data, big dada, guitars and rap blogs. Find me on the internet. 
+                Vanilla Javascript on a static webpage.<br/>
+                Provided with generous support from Amazon Web Services.
+              </p>
+              <p>
+                I'm a software engineer, aspirational musician, and cloudhead created this website one afternoon using a well known method of randomly generating squares on a grid. Interests include: diversity outreach, distributed systems, big data, big dada, guitars and rap blogs. Find me on the internet. 
               </p>
               <p>
                 The picture above is inspired by a piece of art I saw in the MoMA. View the original <em>Random Distribution of 40,000 Squares Using the Odd and Even Numbers of a Telephone Directory</em> by Francois Morellet over at the <a href="https://www.moma.org/m/arts/105479?locale=en">MoMA Website.</a>
               </p>
             </div>
+            <div>
+            </div>
           </div>
         </div>
+        <footer class="row">
+          <div class="col-xs-offset-2 col-xs-8">
+            <ul class="links list-inline">
+              <li>
+                <a href="http://www.twitter.com/sbilstein">@sbilstein</a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/siegfriedbilstein">linkedin</a>
+              </li>
+              <li>
+                <a href="https://github.com/sbilstein">github</a>
+              </li>
+              <li>
+                <a href="https://www.flickr.com/photos/63880564@N03/albums">flickr</a>
+              </li>  
+            </ul>
+          </div>  
+        </footer>
       </div> 
     </div>  
     <script src="js/libs/bootstrap.js" type="text/javascript"></script>
