fixed some grmmr rrrs

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -39,7 +39,7 @@
                 Provided with generous support from Amazon Web Services.
               </p>
               <p>
-                I'm a software engineer, aspirational musician, and cloudhead created this website one afternoon using a well known method of randomly generating squares on a grid. Interests include: diversity outreach, distributed systems, big data, big dada, guitars and rap blogs. Find me on the internet. 
+                I'm a software engineer, aspiring musician, and a cloudhead. I built this website one afternoon using a well known method of randomly generating squares on a grid. My interests include: diversity outreach, distributed systems, big data, big dada, guitars and rap blogs. Find me on the internet. 
               </p>
               <p>
                 The picture above is inspired by a piece of art I saw in the MoMA. View the original <em>Random Distribution of 40,000 Squares Using the Odd and Even Numbers of a Telephone Directory</em> by Francois Morellet over at the <a href="https://www.moma.org/m/arts/105479?locale=en">MoMA Website.</a>
