--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
     <div class="site-wrapper">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-offset-2 col-xs-8">
+          <div class="col-xs-offset-2 col-xs-8 col-m-offset-4 col-m-4">
             <div class="canvas-wrapper">
               <canvas id="rothko"></canvas>
             </div>
