--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,12 +12,12 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-26514236-1', 'auto');
-    ga('send', 'pageview');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-26514236-1', 'auto');
+      ga('send', 'pageview');
     </script>
     <script src="js/libs/jquery.js" type="text/javascript"></script>
   </head>
@@ -26,8 +26,10 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-offset-2 col-xs-8">
-            <canvas id="rothko"></canvas>
-            <div>
+            <div class="canvas-wrapper">
+              <canvas id="rothko"></canvas>
+            </div>
+            <div class="main">
               <span>
                 <h1>S. BILSTEIN</h1> 
               </span>
