made some new arts

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
     <div class="site-wrapper">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-offset-2 col-xs-8 col-m-offset-4 col-m-4">
+          <div class="col-xs-offset-2 col-xs-8 col-sm-offset-3 col-sm-6 col-lg-offset-4 col-lg-4">
             <div class="canvas-wrapper">
               <canvas id="rothko"></canvas>
             </div>
@@ -34,7 +34,7 @@
                 <h1>S. BILSTEIN</h1> 
               </span>
               <h3>
-                <em>Untitled</em> c. 2015
+                <em>Floater</em> c. 2015
               </h3>
               <p>
                 Vanilla Javascript on a static webpage.<br/>
@@ -43,16 +43,13 @@
               <p>
                 I'm a software engineer, aspiring musician, and a cloudhead. I built this website one afternoon using a well known method of randomly generating squares on a grid. My interests include: diversity outreach, distributed systems, big data, big dada, guitars and rap blogs. Find me on the internet. 
               </p>
-              <p>
-                The picture above is inspired by a piece of art I saw in the MoMA. View the original <em>Random Distribution of 40,000 Squares Using the Odd and Even Numbers of a Telephone Directory</em> by Francois Morellet over at the <a href="https://www.moma.org/m/arts/105479?locale=en">MoMA Website.</a>
-              </p>
             </div>
             <div>
             </div>
           </div>
         </div>
         <footer class="row">
-          <div class="col-xs-offset-2 col-xs-8">
+          <div class="col-xs-offset-2 col-xs-8 col-sm-offset-3 col-sm-6 col-lg-offset-4 col-lg-4">
             <ul class="links list-inline">
               <li>
                 <a href="http://www.twitter.com/sbilstein">@sbilstein</a>
