refactored JS a bit to concatenate all files into one

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,7 +19,6 @@
       ga('create', 'UA-26514236-1', 'auto');
       ga('send', 'pageview');
     </script>
-    <script src="js/libs/jquery.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="site-wrapper">
@@ -41,35 +40,52 @@
                 Provided with generous support from Amazon Web Services.
               </p>
               <p>
-                I'm a software engineer, aspiring musician, and a cloudhead. I built this website one afternoon using a well known method of randomly generating squares on a grid. My interests include: diversity outreach, distributed systems, big data, big dada, guitars and rap blogs. Find me on the internet. 
+               Grids swayin' in the wind.
+              </p>
+              </div>
+              <p>
+              <span>more art:</span>
+              <ul class="links list-inline">
+                <li><a href="#morellet">morellet</a></li>
+                <li><a href="#floater">floater</a></li>
+              </ul>  
               </p>
             </div>
             <div>
             </div>
           </div>
         </div>
-        <footer class="row">
-          <div class="col-xs-offset-2 col-xs-8 col-sm-offset-3 col-sm-6 col-lg-offset-4 col-lg-4">
-            <ul class="links list-inline">
-              <li>
-                <a href="http://www.twitter.com/sbilstein">@sbilstein</a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/siegfriedbilstein">linkedin</a>
-              </li>
-              <li>
-                <a href="https://github.com/sbilstein">github</a>
-              </li>
-              <li>
-                <a href="https://www.flickr.com/photos/63880564@N03/albums">flickr</a>
-              </li>  
-            </ul>
-          </div>  
-        </footer>
       </div> 
-    </div>  
-    <script src="js/libs/bootstrap.js" type="text/javascript"></script>
+    </div>
+    <footer class="footer">
+    <div class="container">
+      <div class="col-xs-offset-2 col-xs-8 col-sm-offset-3 col-sm-6 col-lg-offset-4 col-lg-4">
+       <h4>about sbilstein</h4>
+        <p>
+          I'm a software engineer, aspiring musician, and a cloudhead. Interests include: diversity outreach, distributed systems, big data, big dada, guitars and rap blogs. Find me on the internet. 
+        </p>
+        <ul class="links list-inline">
+          <li>
+            <a href="http://www.twitter.com/sbilstein">@sbilstein</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/siegfriedbilstein">linkedin</a>
+          </li>
+          <li>
+            <a href="https://github.com/sbilstein">github</a>
+          </li>
+          <li>
+            <a href="https://www.flickr.com/photos/63880564@N03/albums">flickr</a>
+          </li>  
+        </ul>
+      </div>  
+      </div>
+    </footer>
+
     <!-- build:js:prod js/main.min.js -->
+    <script src="js/libs/jquery.js" type="text/javascript"></script>
+    <script src="js/libs/jquery-router-plugin.js" type="text/javascript"></script>
+    <script src="js/libs/bootstrap.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
     <!-- /build -->
   </body>
