--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -8,7 +8,7 @@ html, body {
 }
 
 .canvas-wrapper {
-	padding-top: 35px;
+	padding-top: 65px;
 	canvas {
 		box-shadow: 0px 0px 3px #222;	
 	}
@@ -16,4 +16,12 @@ html, body {
 
 .main {
 	text-align: justify;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 300px;
 }
