--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -18,10 +18,41 @@ html, body {
 	text-align: justify;
 }
 
-.footer {
+.art-selector {
+	box-shadow: @gray 2px 2px 2px;
+	list-style: none;
+	display: inline-block;
+	padding: 5px;
+
+	li {
+
+		margin-bottom: 5px;
+		margin-left: 5px;
+		padding: 5px;
+		a {
+			font-size: 1.75em;
+			text-shadow: @gray 2px 2px;
+			color: @white;
+		}
+
+		a:hover {
+			text-decoration: none;
+			text-shadow: red 2px 2px;
+		}
+
+		a:visited, a:focus, a:active {
+			text-decoration: none;
+		}
+
+		background: @green-white;
+		/*box-shadow: 0px 0px 3px #222;	*/
+	}
+}
+
+/*.footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
+   Set the fixed height of the footer here 
   height: 300px;
-}
+}*/
