--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>sbilstein.com</title>
-    <link rel="stylesheet" media="screen" href="stylesheets/main.css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>sbilstein.com</title>
+  <link rel="stylesheet" media="screen" href="stylesheets/main.css">
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-26514236-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-  </head>
-  <body>
-    <div class="site-wrapper">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-xs-offset-2 col-xs-8 col-sm-offset-3 col-sm-6 col-lg-offset-4 col-lg-4">
-            <div class="canvas-wrapper">
-              <canvas id="rothko"></canvas>
-            </div>
-            <div class="main">
-              <span>
+      <![endif]-->
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-26514236-1', 'auto');
+        ga('send', 'pageview');
+      </script>
+    </head>
+    <body>
+      <div class="site-wrapper">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-offset-2 col-xs-8 col-sm-offset-3 col-sm-6 col-lg-offset-4 col-lg-4">
+              <div class="canvas-wrapper">
+                <canvas id="rothko"></canvas>
+              </div>         
+              <div class="main">
+               <span>
                 <h1>S. BILSTEIN</h1> 
               </span>
               <h3>
@@ -39,48 +39,47 @@
                 Vanilla Javascript on a static webpage.<br/>
                 Provided with generous support from Amazon Web Services.
               </p>
-              <p>
-               Grids swayin' in the wind.
-              </p>
-              </div>
-              <p>
-              <span>more art:</span>
-              <ul class="links list-inline">
-                <li><a href="#morellet">morellet</a></li>
-                <li><a href="#floater">floater</a></li>
-              </ul>  
-              </p>
-            </div>
-            <div>
+              <h5>GALLERY</h5>
+              <div>
+              <ul class="links list-inline art-selector">
+                <li><a id="morellet-link" href="#morellet">morellet</a></li>
+                <li><a id="floater-link" href="#floater">floater</a></li>
+                <li><a id="cantor-link" href="#cantor">cantor</a></li>
+              </ul> 
+              </div> 
+
             </div>
           </div>
+
         </div>
-      </div> 
-    </div>
-    <footer class="footer">
-    <div class="container">
-      <div class="col-xs-offset-2 col-xs-8 col-sm-offset-3 col-sm-6 col-lg-offset-4 col-lg-4">
-       <h4>about sbilstein</h4>
-        <p>
-          I'm a software engineer, aspiring musician, and a cloudhead. Interests include: diversity outreach, distributed systems, big data, big dada, guitars and rap blogs. Find me on the internet. 
-        </p>
-        <ul class="links list-inline">
-          <li>
-            <a href="http://www.twitter.com/sbilstein">@sbilstein</a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/siegfriedbilstein">linkedin</a>
-          </li>
-          <li>
-            <a href="https://github.com/sbilstein">github</a>
-          </li>
-          <li>
-            <a href="https://www.flickr.com/photos/63880564@N03/albums">flickr</a>
-          </li>  
-        </ul>
-      </div>  
       </div>
-    </footer>
+    </div> 
+    <!-- <div class="container-fluid">
+      <footer class="footer row">
+        <div class="col-xs-offset-2 col-xs-8 col-sm-offset-3 col-sm-6 col-lg-offset-4 col-lg-4">
+          <div>
+           <h4>about sbilstein</h4>
+            <p>
+              I'm a software engineer, aspiring musician, and a cloudhead. Interests include: diversity outreach, distributed systems, big data, big dada, guitars and rap blogs. Find me on the internet. 
+            </p>
+            <ul class="links list-inline">
+              <li>
+                <a href="http://www.twitter.com/sbilstein">@sbilstein</a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/siegfriedbilstein">linkedin</a>
+              </li>
+              <li>
+                <a href="https://github.com/sbilstein">github</a>
+              </li>
+              <li>
+                <a href="https://www.flickr.com/photos/63880564@N03/albums">flickr</a>
+              </li>  
+            </ul>
+          </div>  
+        </div>  
+      </footer>
+    </div> -->
 
     <!-- build:js:prod js/main.min.js -->
     <script src="js/libs/jquery.js" type="text/javascript"></script>
@@ -89,4 +88,4 @@
     <script src="js/main.js" type="text/javascript"></script>
     <!-- /build -->
   </body>
-</html>
+  </html>
