cleaned things up, links work

--- a/app/assets/stylesheets/custom-variables.less
+++ b/app/assets/stylesheets/custom-variables.less
@@ -1,7 +1,9 @@
 /** DADA COLORS **/
 
 @white: #EEEBEB;
-@green-white: #EFFFEB;
+@green-lightest: #F0FFEC;
+@green-lighter: #CCF8CC;
+@green: #A2EAA2;
 @blue-lighter: #cee0f5;
 @blue-light: #b7d0ec;
 @blue: #9ebee1;
