--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -19,10 +19,17 @@ html, body {
 }
 
 .art-selector {
+/*	margin: 4px;
+	margin-bottom: 5px;*/
 	box-shadow: @gray 2px 2px 2px;
-	list-style: none;
-	display: inline-block;
+	border: 1px solid @gray-lighter;
+	/*background: @green;*/
 	padding: 5px;
+	
+	ul {
+		list-style: none;
+		display: inline-block;	
+	}
 
 	li {
 
@@ -32,7 +39,7 @@ html, body {
 		a {
 			font-size: 1.75em;
 			text-shadow: @gray 2px 2px;
-			color: @white;
+			color: @green-lightest;
 		}
 
 		a:hover {
@@ -44,7 +51,6 @@ html, body {
 			text-decoration: none;
 		}
 
-		background: @green-white;
 		/*box-shadow: 0px 0px 3px #222;	*/
 	}
 }
