--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,16 +35,17 @@
               <h3>
                 <em>Floater</em> c. 2015
               </h3>
-              <p>
+              <p id="attribution">
                 Vanilla Javascript on a static webpage.<br/>
                 Provided with generous support from Amazon Web Services.
               </p>
-              <h5>GALLERY</h5>
+              <p id="description">
+              </p>
+              <h5>more art(s)</h5>
               <div>
-              <ul class="links list-inline art-selector">
+              <ul class="links list-inline">
                 <li><a id="morellet-link" href="#morellet">morellet</a></li>
                 <li><a id="floater-link" href="#floater">floater</a></li>
-                <li><a id="cantor-link" href="#cantor">cantor</a></li>
               </ul> 
               </div> 
 
@@ -54,13 +55,13 @@
         </div>
       </div>
     </div> 
-    <!-- <div class="container-fluid">
+    <div class="container-fluid">
       <footer class="footer row">
         <div class="col-xs-offset-2 col-xs-8 col-sm-offset-3 col-sm-6 col-lg-offset-4 col-lg-4">
           <div>
            <h4>about sbilstein</h4>
             <p>
-              I'm a software engineer, aspiring musician, and a cloudhead. Interests include: diversity outreach, distributed systems, big data, big dada, guitars and rap blogs. Find me on the internet. 
+              I'm a software engineer, musician, and a cloudhead. Interests include: diversity outreach, distributed systems, big data, big dada, guitars, and hip hop. Find me on the internet. 
             </p>
             <ul class="links list-inline">
               <li>
@@ -79,8 +80,7 @@
           </div>  
         </div>  
       </footer>
-    </div> -->
-
+    </div>
     <!-- build:js:prod js/main.min.js -->
     <script src="js/libs/jquery.js" type="text/javascript"></script>
     <script src="js/libs/jquery-router-plugin.js" type="text/javascript"></script>
