trying to animate cantor

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,7 +33,7 @@
                 <h1>S. BILSTEIN</h1> 
               </span>
               <h3>
-                <em>Floater</em> c. 2015
+                <em id="canvas-title">Floater</em> c. 2015
               </h3>
               <p id="attribution">
                 Vanilla Javascript on a static webpage.<br/>
@@ -46,6 +46,7 @@
               <ul class="links list-inline">
                 <li><a id="morellet-link" href="#morellet">morellet</a></li>
                 <li><a id="floater-link" href="#floater">floater</a></li>
+                <li><a id="cantor-link" href="#cantor">cantor</a></li>
               </ul> 
               </div> 
 
