--- a/app/views/index.html
+++ b/app/views/index.html
@@ -46,7 +46,6 @@
               <ul class="links list-inline">
                 <li><a id="morellet-link" href="#morellet">morellet</a></li>
                 <li><a id="floater-link" href="#floater">floater</a></li>
-                <li><a id="cantor-link" href="#cantor">cantor</a></li>
               </ul> 
               </div> 
 
@@ -62,7 +61,10 @@
           <div>
            <h4>about sbilstein</h4>
             <p>
-              I'm a software engineer, musician, and a cloudhead. Interests include: diversity outreach, distributed systems, big data, big dada, guitars, and hip hop. Find me on the internet. 
+              I'm a software engineer, manager, musician, and a cloudhead. Interests include: diversity outreach, distributed systems, big data, big dada, guitars, and hip hop. Find me on the internet. 
+            </p>
+            <p>
+              Mostly do computer stuff and play in my psych rock / electro pop band <a href="http://raddad.band">Rad Dad</a>
             </p>
             <ul class="links list-inline">
               <li>
